modules/gdscript/tests/scripts/analyzer/errors/cyclic_ref_enum.gd
func test():
	print(E1.V)

enum E1 {V = E2.V}
enum E2 {V = E1.V}
